add project stuff

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
-  <title>Migrations InfoVis</title>
+  <title>Migrations InfoVis ✨</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Migration Visualization for InfoVis class">
-  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
   <section>
-
+    <p>Controls go here</p>
   </section>
   <section>
     <figure>
@@ -31,13 +30,6 @@
       <div></div>
     </figure>
   </section>
-
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="http://d3js.org/queue.v1.min.js"></script>
-  <script src="http://d3js.org/topojson.v1.min.js"></script>
-  <script src="scripts/tooltip.js"></script>
-  <!----script type="text/javascript" src="scripts/d3.v5.min.js"></script-->
-  <script type="text/javascript" src="scripts/scripts.js"></script>
 </body>
 
 </html>
