Add countries Rename src

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Migration Visualization for InfoVis class">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="res/styles.css">
 </head>
 
 <body>
@@ -32,12 +32,11 @@
     </figure>
   </section>
 
-  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="http://d3js.org/d3.v4.min.js"></script>
   <script src="http://d3js.org/queue.v1.min.js"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
-  <script src="scripts/tooltip.js"></script>
-  <!----script type="text/javascript" src="scripts/d3.v5.min.js"></script-->
-  <script type="text/javascript" src="scripts/scripts.js"></script>
+  <script src="res/tooltip.js"></script>
+  <script type="text/javascript" src="res/scripts.js"></script>
 </body>
 
 </html>
