--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </figure>
   </section>
 
-  <script src="http://d3js.org/d3.v4.min.js"></script>
-  <script src="http://d3js.org/queue.v1.min.js"></script>
-  <script src="http://d3js.org/topojson.v1.min.js"></script>
+  <script src="//d3js.org/d3.v4.min.js"></script>
+  <script src="//d3js.org/queue.v1.min.js"></script>
+  <script src="//d3js.org/topojson.v1.min.js"></script>
   <script src="res/tooltip.js"></script>
   <script type="text/javascript" src="res/scripts.js"></script>
 </body>
