--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Migrations InfoVis ✨</title>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Migration Visualization for InfoVis class">
+  <meta name="theme-color" content="#000000">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <title>Migrations InfoVis ✨</title>
 </head>
 
 <body>
@@ -29,6 +31,9 @@
       <h2>Chord Diagram</h2>
       <div></div>
     </figure>
+  </section>
+  <section>
+    <div id="root"></div>
   </section>
 </body>
 
