--- a/public/index.html
+++ b/public/index.html
@@ -12,23 +12,24 @@
 
 <body>
   <nav>
-    <div>Controls go here</div>
+    <div>Controls will go here</div>
   </nav>
   <main class="idioms">
     <div class="row">
-      <div class="idiom plot">
-        <div id="plot"></div>
+      <div class="idiom chord">
+        <div id="chord"></div>
       </div>
       <div class="idiom map">
         <div id="map"></div>
       </div>
     </div>
     <div class="row">
+      <div class="idiom plot">
+        <div id="plot"></div>
+      </div>
+
       <div class="idiom lines">
         <div id="lines"></div>
-      </div>
-      <div class="idiom chord">
-        <div id="chord"></div>
       </div>
     </div>
   </main>
