Clean data Add HTML for event loading and E/I toggle

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,13 @@
   <nav>
     <div class="row">
       <div id="countrySelect"></div>
+      <div id="migrationSwitch">
+        Immigration/Emigration
+      </div>
       <div id="yearSlider"></div>
+      <div id="eventList">
+        {Loading events goes here!}
+      </div>
     </div>
   </nav>
   <main class="idioms">
