Implement multi select Improve data Refactor linechart

--- a/public/index.html
+++ b/public/index.html
@@ -13,30 +13,34 @@
 <body>
   <nav>
     <div class="row">
-      <div id="countrySelect"></div>
-      <div id="migrationSwitch">
-        Immigration/Emigration
+      <div class="control">
+        <div id="countrySelect"></div>
       </div>
-      <div id="yearSlider"></div>
-      <div id="eventList">
-        {Loading events goes here!}
+      <div class="control">
+        <div id="migrationSwitch">(Im/E)migration</div>
+      </div>
+      <div class="control">
+        <div id="yearSlider"></div>
+      </div>
+      <div class="control">
+        <div id="eventList">{events goes here!}</div>
       </div>
     </div>
   </nav>
   <main class="idioms">
     <div class="row">
-      <div class="idiom chord">
+      <div class="idiom">
         <div id="chord"></div>
       </div>
-      <div class="idiom map">
+      <div class="idiom">
         <div id="map"></div>
       </div>
     </div>
     <div class="row">
-      <div class="idiom plot">
+      <div class="idiom">
         <div id="plot"></div>
       </div>
-      <div class="idiom lines">
+      <div class="idiom">
         <div id="lines"></div>
       </div>
     </div>
