Switch CSS to dark theme Add Emigration/Immigration toggle/switch Refactor code/data

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <div id="countrySelect"></div>
       </div>
       <div class="control">
-        <div id="migrationSwitch">(Im/E)migration</div>
+        <span id="migrationSwitch"></span>
       </div>
       <div class="control">
         <div id="yearSlider"></div>
