Improve year slider Refactor code

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <div id="yearSlider"></div>
       </div>
       <div class="control">
-        <div id="eventList">{events goes here!}</div>
+        <!--div id="eventList">{events goes here!}</div-->
       </div>
     </div>
   </nav>
