--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,14 @@
       <div class="control">
         <div id="countrySelect"></div>
       </div>
-      <div class="control">
-        <span id="migrationSwitch"></span>
-      </div>
+      <!--div class="control">
+        <div id="eventList"></div>
+      </div-->
       <div class="control">
         <div id="yearSlider"></div>
       </div>
       <div class="control">
-        <!--div id="eventList">{events goes here!}</div-->
+        <span id="migrationSwitch"></span>
       </div>
     </div>
   </nav>
