--- a/public/index.html
+++ b/public/index.html
@@ -16,32 +16,30 @@
       <div class="control">
         <div id="countrySelect"></div>
       </div>
-      <!--div class="control">
-        <div id="eventList"></div>
-      </div-->
       <div class="control">
         <div id="yearSlider"></div>
       </div>
       <div class="control">
         <span id="migrationSwitch"></span>
       </div>
+      <div class="control">
+        <div id="graphToggle">Toggle!</div>
+      </div>
     </div>
   </nav>
   <main class="idioms">
     <div class="row">
-      <div class="idiom">
-        <div id="chord"></div>
-      </div>
       <div class="idiom">
         <div id="map"></div>
       </div>
     </div>
     <div class="row">
       <div class="idiom">
-        <div id="plot"></div>
+        <div id="chord"></div>
       </div>
       <div class="idiom">
         <div id="lines"></div>
+        <div id="plot"></div>
       </div>
     </div>
   </main>
