--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,7 @@
         <div id="chord"></div>
       </div>
       <div class="idiom">
-        <div id="lines"></div>
-        <div id="plot"></div>
+        <div id="graph"></div>
       </div>
     </div>
   </main>
