Implement EventSelect Improve CountrySelect Fix CountrySelect remove Fix Graph compare data Improve colors

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
         <div id="countrySelect"></div>
       </div>
       <div class="control">
+        <div id="eventList"></div>
+      </div>
+      <div class="control">
         <div id="yearSlider"></div>
       </div>
       <div class="control">
